package org.example.foodflow2.model.enums;

public enum EstadoPedido {
    PENDIENTE,
    PREPARANDO,
    LISTO,
    EN_CAMINO,
    ENTREGADO,
    CANCELADO
}
